8.10 - Dropdown on mobile fixed

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,7 +2,7 @@
   .port-navbar.port-nav-base {
     position: fixed;
     width: 100%;
-    height: 50px;
+    // height: 50px;
     z-index: 15;
     padding: 40px;
   
@@ -48,6 +48,8 @@
 
       .port-dropdown-toogle {
         color: white;
+        margin-left: 10px;
+        margin-right: 10px;
       }
     }
   
@@ -57,4 +59,12 @@
   .port-navbar.port-nav-base.port-nav-default {
     padding: 30px;
     background-color: $secondary !important;
+  }
+
+  .bg-transparent.menu-open {
+    background-color: #2C3E50 !important;
+  }
+
+  .bg-transparent.menu-close {
+    transition: 1s;
   }
